--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,56 @@
+aioredis==1.0.0
 asgiref==2.2.0
+asn1crypto==0.24.0
 async-timeout==2.0.1
 attrs==17.4.0
 autobahn==18.4.1
 Automat==0.6.0
 certifi==2018.1.18
+cffi==1.11.5
 channels==2.0.2
+channels-redis==2.1.1
 chardet==3.0.4
 constantly==15.1.0
+cryptography==2.2.2
 daphne==2.1.0
+dj-database-url==0.5.0
 Django==2.0.4
 django-channels==0.7.0
+django-channels-presence==0.0.9
+django-heroku==0.3.1
+django-redis-cache==1.7.1
 extras==1.0.0
+gunicorn==19.8.1
+h2==3.0.1
+hiredis==0.2.0
+hpack==3.0.0
 httplib2==0.11.3
+hyperframe==5.1.0
 hyperlink==18.0.0
 idna==2.6
 incremental==17.5.0
+msgpack==0.5.6
 oauthlib==2.0.7
 Pillow==5.1.0
+pipenv==2018.5.18
+priority==1.3.0
 psycopg2==2.7.4
 psycopg2-binary==2.7.4
+pyasn1==0.4.2
+pyasn1-modules==0.2.1
+pycparser==2.18
+pymongo==3.6.1
+pyOpenSSL==17.5.0
 pytz==2018.4
 redis==2.10.6
 requests==2.18.4
 requests-oauthlib==0.8.0
+service-identity==17.0.0
 six==1.11.0
 Twisted==17.9.0
 txaio==2.10.0
 urllib3==1.22
+virtualenv==16.0.0
+virtualenv-clone==0.3.0
+whitenoise==3.3.1
 zope.interface==4.4.3
