--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aioredis==1.0.0
+asgi-redis==1.4.3
 asgiref==2.3.2
 asn1crypto==0.24.0
 async-timeout==2.0.1
@@ -30,6 +31,7 @@ hyperlink==18.0.0
 idna==2.6
 incremental==17.5.0
 msgpack==0.5.6
+msgpack-python==0.5.6
 oauthlib==2.0.7
 Pillow==5.1.0
 pipenv==2018.5.18
