--- a/Pipfile
+++ b/Pipfile
@@ -9,17 +9,14 @@ python_version = "3.5"
 [dev-packages]
 
 [packages]
-asgiref = "==2.2.0"
-async-timeout = "==2.0.1"
+asgiref = "==2.3.2"
 attrs = "==17.4.0"
 autobahn = "==18.4.1"
-automat = "==0.6.0"
 certifi = "==2018.1.18"
-channels = "==2.0.2"
+channels = "==2.1.1"
 chardet = "==3.0.4"
 constantly = "==15.1.0"
 daphne = "==2.1.0"
-django = "==2.0.4"
 django-channels = "==0.7.0"
 extras = "==1.0.0"
 "httplib2" = "==0.11.3"
@@ -27,7 +24,6 @@ hyperlink = "==18.0.0"
 idna = "==2.6"
 incremental = "==17.5.0"
 oauthlib = "==2.0.7"
-pillow = "==5.1.0"
 "psycopg2" = "==2.7.4"
 "psycopg2-binary" = "==2.7.4"
 pytz = "==2018.4"
@@ -35,11 +31,39 @@ redis = "==2.10.6"
 requests = "==2.18.4"
 requests-oauthlib = "==0.8.0"
 six = "==1.11.0"
-twisted = "==17.9.0"
 txaio = "==2.10.0"
 "urllib3" = "==1.22"
 "zope.interface" = "==4.4.3"
-gunicorn = "*"
-django-heroku = "*"
-whitenoise = "*"
-dj-database-url = "*"
+gunicorn = "==19.8.1"
+django-heroku = "==0.3.1"
+whitenoise = "==3.3.1"
+dj-database-url = "==0.5.0"
+aioredis = "==1.0.0"
+"asn1crypto" = "==0.24.0"
+cffi = "==1.11.5"
+cryptography = "==2.2.2"
+django-channels-presence = "==0.0.9"
+django-redis-cache = "==1.7.1"
+"h2" = "==3.0.1"
+hiredis = "==0.2.0"
+hpack = "==3.0.0"
+hyperframe = "==5.1.0"
+msgpack = "==0.5.6"
+msgpack-python = "==0.5.6"
+pipenv = "==2018.5.18"
+priority = "==1.3.0"
+"pyasn1" = "==0.4.2"
+"pyasn1-modules" = "==0.2.1"
+pycparser = "==2.18"
+pymongo = "==3.6.1"
+virtualenv = "==16.0.0"
+virtualenv-clone = "==0.3.0"
+async_timeout = "==2.0.1"
+Automat = "==0.6.0"
+Django = "==2.0.4"
+Pillow = "==5.1.0"
+Twisted = "==17.9.0"
+asgi_redis = "==1.4.3"
+channels_redis = "==2.1.1"
+pyOpenSSL = "==17.5.0"
+service_identity = "==17.0.0"
